other/res/restrict-service-account/.kyverno-test/resource.yaml

apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: staging
spec:
  serviceAccountName: busybox
  containers:
  - image: busybox:1.28
    name: busybox
    args:
    - sleep
    - "9999"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: staging
spec:
  serviceAccountName: demo
  containers:
  - image: nginx:latest
    name: nginx
