other/res/restrict-service-account/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-service-account
policies:
- ../restrict-service-account.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: restrict-service-account
  resources:
  - badpod01
  result: fail
  rule: validate-service-account
- kind: Pod
  policy: restrict-service-account
  resources:
  - goodpod01
  result: pass
  rule: validate-service-account
variables: values.yaml
